plugins {
    id 'java'
    id 'application'
}

group = 'com.trimio.tests'
version = '1.0-SNAPSHOT'

sourceCompatibility = '11'

repositories {
    mavenCentral()
}

dependencies {
    // Appium Java client (includes the necessary Selenium bits transitively)
    implementation 'io.appium:java-client:8.6.0'

    // Test framework of your choice
    testImplementation 'org.testng:testng:7.7.1'
}

// Specify the main class for the application plugin
application {
    mainClass = 'com.trimio.tests.TrimioLoginTest'
    //mainClass = 'com.trimio.tests.FirstTest'
    //mainClass = 'com.trimio.tests.TrimioScheduleAppointmentTest'
}

test {
    useTestNG()
    testLogging {
        events "passed", "skipped", "failed", "standardOut", "standardError"
    }
}